crates/swc-plugin-codegen/tests/snapshots/transform_ts_test__ts_commands_with_coverage.snap
---
source: crates/swc-plugin-codegen/tests/transform_ts_test.rs
expression: result
---
import type { ViewProps } from 'ViewPropTypes';
import type { HostComponent } from 'react-native';
const codegenNativeCommands = require('codegenNativeCommands');
const codegenNativeComponent = require('codegenNativeComponent');
export interface ModuleProps extends ViewProps {
}
type NativeType = HostComponent<ModuleProps>;
interface NativeCommands {
    readonly pause: (viewRef: React.ComponentRef<NativeType>) => void;
    readonly play: (viewRef: React.ComponentRef<NativeType>) => void;
}
const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const { dispatchCommand } = require("react-native/Libraries/ReactNative/RendererProxy");
let nativeComponentName = 'Module';
export const __INTERNAL_VIEW_CONFIG = {
    uiViewClassName: "Module",
    validAttributes: {}
};
export default NativeComponentRegistry.get(nativeComponentName, ()=>__INTERNAL_VIEW_CONFIG);
export const Commands = {
    pause (ref) {
        dispatchCommand(ref, "pause", []);
    },
    play (ref) {
        dispatchCommand(ref, "play", []);
    }
};
