crates/swc-plugin-codegen/tests/snapshots/transform_ts_test__ts_full_native_component.snap
---
source: crates/swc-plugin-codegen/tests/transform_ts_test.rs
expression: result
---
import type { Int32, BubblingEventHandler, DirectEventHandler, WithDefault } from 'CodegenTypes';
import type { HostComponent } from 'react-native';
import type { ViewProps } from 'ViewPropTypes';
const codegenNativeCommands = require('codegenNativeCommands');
const codegenNativeComponent = require('codegenNativeComponent');
export interface ModuleProps extends ViewProps {
    boolean_default_true_optional_both?: WithDefault<boolean, true>;
    onDirectEventDefinedInlineNull: DirectEventHandler<null>;
    onBubblingEventDefinedInlineNull: BubblingEventHandler<null>;
}
type NativeType = HostComponent<ModuleProps>;
interface NativeCommands {
    readonly hotspotUpdate: (viewRef: React.ComponentRef<NativeType>, x: Int32, y: Int32) => void;
    readonly scrollTo: (viewRef: React.ComponentRef<NativeType>, y: Int32, animated: boolean) => void;
}
const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const { ConditionallyIgnoredEventHandlers } = require('react-native/Libraries/NativeComponent/ViewConfigIgnore');
const { dispatchCommand } = require("react-native/Libraries/ReactNative/RendererProxy");
let nativeComponentName = 'RCTModule';
export const __INTERNAL_VIEW_CONFIG = {
    uiViewClassName: "RCTModule",
    bubblingEventTypes: {
        topBubblingEventDefinedInlineNull: {
            phasedRegistrationNames: {
                captured: "onBubblingEventDefinedInlineNullCapture",
                bubbled: "onBubblingEventDefinedInlineNull"
            }
        }
    },
    directEventTypes: {
        topDirectEventDefinedInlineNull: {
            registrationName: "onDirectEventDefinedInlineNull"
        }
    },
    validAttributes: {
        boolean_default_true_optional_both: true,
        ...ConditionallyIgnoredEventHandlers({
            onDirectEventDefinedInlineNull: true,
            onBubblingEventDefinedInlineNull: true
        })
    }
};
export default NativeComponentRegistry.get(nativeComponentName, ()=>__INTERNAL_VIEW_CONFIG);
export const Commands = {
    hotspotUpdate (ref, x, y) {
        dispatchCommand(ref, "hotspotUpdate", [
            x,
            y
        ]);
    },
    scrollTo (ref, y, animated) {
        dispatchCommand(ref, "scrollTo", [
            y,
            animated
        ]);
    }
};
