crates/swc-plugin-codegen/tests/snapshots/transform_ts_test__ts_not_a_native_component.snap
---
source: crates/swc-plugin-codegen/tests/transform_ts_test.rs
expression: result
---
const requireNativeComponent = require('requireNativeComponent').default;
export default 'Not a view config';
